# reanimate

./: .gitignore  .readthedocs.yaml  .stylish-haskell.yaml  BAKER_SCRIPT.md  ChangeLog.md  Dockerfile.base  Dockerfile.discord  Dockerfile.playground  README.md  RESOURCES.md  azure-pipelines.yml  default.nix  haddock.txt  haddock_badge.json  hie.yaml  hpc_badge.json  hpc_index.html  hpc_index_alt.html  hpc_index_exp.html  hpc_index_fun.html  mkdocs.yml  reanimate.cabal  run-tests.sh  shell.nix  sorting.hs  stack-lts-11.yaml  stack-lts-12.yaml  stack-lts-13.yaml  stack-lts-14.yaml  stack-lts-15.yaml  stack-lts-16.yaml  stack-lts-17.yaml  stack-lts-22.yaml  stack.yaml  test.tex  test_latex.tex  texlive.profile
.azure/: azure-linux-template.yml  azure-osx-template.yml  azure-windows-template.yml
.github/: FUNDING.yml  dependabot.yml
data/: CIE_XYZ.csv  CIExyz.csv  cone_sensitivity_lms.csv
discord-bot/: CHANGELOG.md  discord-bot.cabal  docker-compose.yml  stack.yaml
docs/: changelog-2020-10.md  changelog.md  discord_bot.md  fix.css  font_catalogue.md  font_script.hs  font_system.md  fonts.md  gallery.md  gen_doc_gifs.sh  gen_gallery.sh  glue_tut.md  index.md  introduction.md  morphology.md  render_all.sh  requirements.txt  showcase_colortheory.md  sssp.md  (+3 more)
reanimate-playground/: Dockerfile.nginx  README.md  hie.yaml  nginx.conf  playground.cabal
reanimate-playground/snippets/: 01_Composition.hs  02_Color Maps.hs  05_LaTeX.hs  08_Object Positions.hs  09_Camera.hs
reanimate-playground/src/: Main.hs
reanimate-playground/viewer-elm/src/: Main.elm  Ports.elm
(+720 files in other folders)
